--- a/.tx/config
+++ b/.tx/config
@@ -1,9 +1,10 @@
 [main]
-host = https://www.transifex.com
+host = https://app.transifex.com
 
-[foreman.hammer-cli-foreman-puppet]
-file_filter = locale/<lang>/hammer-cli-foreman-puppet.po
-source_file = locale/hammer-cli-foreman-puppet.pot
-source_lang = en
-type = PO
-
+[o:foreman:p:foreman:r:hammer-cli-foreman-puppet]
+file_filter   = locale/<lang>/hammer-cli-foreman-puppet.po
+source_file   = locale/hammer-cli-foreman-puppet.pot
+source_lang   = en
+type          = PO
+minimum_perc  = 0
+resource_name = hammer-cli-foreman-puppet
