Setup translation infrastructure

--- a/.tx/config
+++ b/.tx/config
@@ -1,9 +1,9 @@
 [main]
-host = https://www.transifex.com
+host = https://app.transifex.com
 
-[foreman.hammer-cli-foreman-puppet]
-file_filter = locale/<lang>/hammer-cli-foreman-puppet.po
+[o:foreman:p:foreman:r:hammer-cli-foreman-puppet]
+file_filter = locale/<lang>/hammer-cli-foreman-puppet.edit.po
 source_file = locale/hammer-cli-foreman-puppet.pot
 source_lang = en
 type = PO
-
+resource_name = hammer-cli-foreman-puppet
