--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -11,8 +11,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  rubocop:
+    name: Rubocop
+    uses: theforeman/actions/.github/workflows/rubocop.yml@v0
+
   test:
     name: Tests
+    needs: rubocop
     uses: theforeman/actions/.github/workflows/test-gem.yml@v0
     with:
       command: bundle exec rake test
