Use theforeman-rubocop gem
Inherited strictest.yml here, this rules have NewCops enable config.
Also dropped some cops from here because that was either included
in the inherit file or was not needed anymore.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,27 +1,20 @@
-require:
-  - rubocop-performance
-  - rubocop-minitest
+inherit_from: .rubocop_todo.yml
+
+inherit_gem:
+  theforeman-rubocop:
+    - strictest.yml
 
 AllCops:
-  NewCops: enable
-
-Layout/EmptyLineAfterGuardClause:
-  Enabled: false
+  TargetRubyVersion: 2.7
 
 Layout/LineLength:
   Enabled: false
-
-Style/FormatStringToken:
-  EnforcedStyle: template
 
 Style/HashSyntax:
   EnforcedStyle: no_mixed_keys
 
 Style/SymbolArray:
   EnforcedStyle: brackets
-
-Style/Documentation:
-  Enabled: false
 
 Style/GuardClause:
   Enabled: false
@@ -36,12 +29,6 @@ Style/IfUnlessModifier:
   Enabled: false
 
 Metrics:
-  Enabled: false
-
-Gemspec/RequireMFA:
-  Enabled: false
-
-Style/SymbolProc:
   Enabled: false
 
 Style/MixinUsage:
